# Airport

./: .gitignore  CMakeLists.txt  GPT.txt  README.md  docker-compose.yml
GroundControl/: CMakeLists.txt  GroundControl.cpp  LandinMap
data/: airport_map.json
scripts/: init_flights.sh
services/: Board.cpp  FollowMe.cpp  GroundControl.cpp  InformationPanel.cpp
text_data/: TextData
